[package]
name = "live_stream"
version = "0.1.0"
authors = ["Ruediger Klaehn <rklaehn@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"

[dev-dependencies]
tokio = { version = "0.2.21", features = ["full"] }
