[package]
name = "live_stream"
version = "0.1.0"
authors = ["Ruediger Klaehn <rklaehn@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
pin-utils = "0.1.0"
pin-project = "0.4.22"

[dev-dependencies]
tokio = { version = "0.2.21", features = ["full"] }
